--- a/terza.html
+++ b/terza.html
@@ -11,7 +11,6 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: green;">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,16 +18,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html" style="color: white">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="recipes.html">Recipes</a>
+                    <a class="nav-link" href="recipes.html" style="color: white">Recipes</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="terza.html">Terza <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="terza.html" style="color: white">Terza <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" style="color: white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Dropdown link
                     </a>
@@ -41,6 +40,28 @@
             </ul>
         </div>
     </nav>
+
+    <br><br><br><br><br>
+
+    <footer class="bg-light text-center text-white">
+        <div class="container p-4 pb-0">
+            <section class="mb-4">
+                <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;" href="#!" role="button"><i
+                        class="fa fa-instagram"></i></a>
+    
+                <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;" href="#!" role="button"><i
+                        class="fa fa-linkedin"></i></a>
+
+                <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="#!" role="button"><i
+                        class="fa fa-github"></i></a>
+            </section>
+        </div>
+
+        <div class="text-center p-3" style="background-color: green">
+            <a>© 2020 Copyright: Get A Recipe Inc.</a>
+        </div>
+    </footer>
+
     <script src="data.js"></script>
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
