--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="flex-container">
         <h1>Try our random recipe option!</h1>
         <button type="button" class="btn btn-primary btn-lg" style="background-color: green">Random Recipe</button>
-        <div><p>Here it will appear the recipe</p></div>
+        <div id="random-recipe"><p>Here</p></div>
     </div>
 
     <br><br><br><br><br>
