--- a/recipes.html
+++ b/recipes.html
@@ -29,17 +29,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="terza.html" style="color: white">Terza</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" style="color: white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
             </ul>
         </div>
     </nav>
@@ -55,25 +44,25 @@
                     </div>
                     <div class="row mt-4 g-1 px-4 mb-5 justify-content-space-between align-items-baseline background-color: rgba(0, 0, 0, 0);">
                         <div class="col-md-2" style="background-color: rgba(0, 0, 0, 0);">
-                            <div class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
+                            <div onclick="byName()" class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
                                     src="Images/recipe-book.png" width="50">
                                 <div class="text-center mg-text"> <span class="mg-text">By name</span> </div>
                             </div>
                         </div>
                         <div class="col-md-2" style="background-color: rgba(0, 0, 0, 0);">
-                            <div class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
+                            <div onclick="byIngredients()" class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
                                     src="Images/ingredients.png" width="50">
                                 <div class="text-center mg-text"> <span class="mg-text">By ingredients</span> </div>
                             </div>
                         </div>
                         <div class="col-md-2" style="background-color: rgba(0, 0, 0, 0);">
-                            <div class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
+                            <div onclick="byNutrients()" class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
                                     src="Images/nutrients.png" width="50">
                                 <div class="text-center mg-text"> <span class="mg-text">By nutrients</span> </div>
                             </div>
                         </div>
                         <div class="col-md-2" style="background-color: rgba(0, 0, 0, 0);">
-                            <div class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
+                            <div onclick="byCuisine()" class="card-inner p-3 d-flex flex-column align-items-center" style="background-color: rgba(0, 0, 0, 0);"> <img
                                     src="Images/cuisine.png" width="50">
                                 <div class="text-center mg-text"> <span class="mg-text">By cuisine</span> </div>
                             </div>
@@ -85,21 +74,21 @@
                             </div>
                             <div>
                                 <div>
-                                    <input type="radio" id="Omnivore" name="drone" value="Omnivore" checked>
+                                    <input type="radio" id="Omnivore" name="drone" onclick="buttonFilters()" value="Omnivore" checked>
                                     <label for="Omnivore">Omnivore</label>
                                 </div>
                                 
                                 <div>
-                                    <input type="radio" id="Vegetarian" name="drone" value="Vegetarian">
+                                    <input type="radio" id="Vegetarian" name="drone" onclick="buttonFilters()" value="Vegetarian">
                                     <label for="Vegetarian">Vegetarian</label>
                                 </div>
                                 
                                 <div>
-                                    <input type="radio" id="Vegan" name="drone" value="Vegan">
+                                    <input type="radio" id="Vegan" name="drone" onclick="buttonFilters()" value="Vegan">
                                     <label for="Vegan">Vegan</label>
                                 </div>
                                 <div>
-                                    <input type="checkbox" id="Gluten-free" name="drone" value="Gluten-free">
+                                    <input type="checkbox" id="gluten-free" onchange="buttonFilters()" name="drone" value="Gluten-free">
                                     <label for="Gluten-free">Gluten-free</label>
                                 </div>
                             </div>
@@ -137,7 +126,7 @@
     </footer>
 
     <script src="data.js"></script>
-    <script src="main.js"></script>
+    <script src="recipes.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
