--- a/recipes.html
+++ b/recipes.html
@@ -83,22 +83,26 @@
                             <div></div>
                             <div>
                                 <div>
-                                    <input class="diets" type="radio" id="Omnivore" name="drone" value="Omnivore" checked>
+                                    <input class="diets" type="radio" id="Omnivore" name="drone" value="omnivore" checked>
                                     <label for="Omnivore">Omnivore</label>
                                 </div>
                                 
                                 <div>
-                                    <input class="diets" type="radio" id="Vegetarian" name="drone" value="Vegetarian">
+                                    <input class="diets" type="radio" id="Vegetarian" name="drone" value="vegetarian">
                                     <label for="Vegetarian">Vegetarian</label>
                                 </div>
                                 
                                 <div>
-                                    <input  class="diets"type="radio" id="Vegan" name="drone" value="Vegan">
+                                    <input  class="diets"type="radio" id="Vegan" name="drone" value="vegan">
                                     <label for="Vegan">Vegan</label>
                                 </div>
                                 <div>
-                                    <input type="checkbox" id="gluten-free" name="drone" value="Gluten-free">
+                                    <input type="checkbox" id="gluten-free" name="drone" value="glutenFree">
                                     <label for="Gluten-free">Gluten-free</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="dairy-free" name="drone" value="dairyFree">
+                                    <label for="Dairy-free">Dairy-free</label>
                                 </div>
                             </div>
                         </div>
@@ -136,6 +140,7 @@
 
     <script src="data.js"></script>
     <script src="recipes.js"></script>
+    <script src="instructions.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
