--- a/recipes.html
+++ b/recipes.html
@@ -39,8 +39,17 @@
                 <div class="card p-4 mt-3">
                     <h3 class="heading mt-5 text-center">How would you like to search for your recipe?</h3>
                     <div class="d-flex justify-content-center px-5" style="background-color: rgba(0, 0, 0, 0);">
-                        <div class="tooltip"><img src="Images/info.png" width="10">
-                            <span class="tooltiptext">Tooltip text</span>
+                        <div id="tooltip1"><img src="Images/info.png" width="20">
+                            <span class="tooltiptext">Tooltip text1</span>
+                        </div>
+                        <div id="tooltip2"><img src="Images/info.png" width="20">
+                            <span class="tooltiptext">Tooltip text2</span>
+                        </div>
+                        <div id="tooltip3"><img src="Images/info.png" width="20">
+                            <span class="tooltiptext">Tooltip text3</span>
+                        </div>
+                        <div id="tooltip4"><img src="Images/info.png" width="20">
+                            <span class="tooltiptext">Tooltip text4</span>
                         </div>
                         <div class="search" id="by-name"> <input type="text" class="search-input" id="by-name-search" placeholder="Search by name..." name=""> 
                             <a href="#" onclick="filterByName(); return false;" class="search-icon"> <i class="fa fa-search"></i> </a> </div>
