--- a/recipes.html
+++ b/recipes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style-recipes.css">
     <link rel="icon" type="image/x-icon" href="Images/watermelon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="recipes.html" style="color: white">Recipes <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="terza.html" style="color: white">Terza</a>
+                    <a class="nav-link" href="favourites.html" style="color: white">Favourites</a>
                 </li>
             </ul>
         </div>
@@ -40,16 +40,16 @@
                     <h3 class="heading mt-5 text-center">How would you like to search for your recipe?</h3>
                     <div class="d-flex justify-content-center px-5" style="background-color: rgba(0, 0, 0, 0);">
                         <div id="tooltip1"><img src="Images/info.png" width="20">
-                            <span class="tooltiptext">Tooltip text1</span>
+                            <span class="tooltiptext">Write the name (or a part of the name) of the recipe you are looking for.</span>
                         </div>
                         <div id="tooltip2"><img src="Images/info.png" width="20">
-                            <span class="tooltiptext">Tooltip text2</span>
+                            <span class="tooltiptext">Write up to three ingredients that you would like to use in your recipe.</span>
                         </div>
                         <div id="tooltip3"><img src="Images/info.png" width="20">
-                            <span class="tooltiptext">Tooltip text3</span>
+                            <span class="tooltiptext">Write the maximum amount of calories the recipe can have.</span>
                         </div>
                         <div id="tooltip4"><img src="Images/info.png" width="20">
-                            <span class="tooltiptext">Tooltip text4</span>
+                            <span class="tooltiptext">Write the type of cuisine of which you would like your recipe to be.</span>
                         </div>
                         <div class="search" id="by-name"> <input type="text" class="search-input" id="by-name-search" placeholder="Search by name..." name=""> 
                             <a href="#" onclick="filterByName(); return false;" class="search-icon"> <i class="fa fa-search"></i> </a> </div>
