--- a/favourites.html
+++ b/favourites.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terza</title>
+    <title>Favourites</title>
     <link rel="icon" type="image/x-icon" href="Images/watermelon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="recipes.html" style="color: white">Recipes</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="terza.html" style="color: white">Terza <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="favourites.html" style="color: white">Terza <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
