--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="recipes.html" style="color: white">Recipes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="terza.html" style="color: white">Terza</a>
+                    <a class="nav-link" href="favourites.html" style="color: white">Favourites</a>
                 </li>
             </ul>
         </div>
@@ -40,7 +40,7 @@
         <h1 id="welcome-on">Welcome on</h1>
         <h1 id="get-a-recipe">Get A Recipe!</h1>
         <br><br>
-        <p>Welcome on Get A Recipe! On this site you'll be able to quickly get access to recipes, according to your needs.
+        <p>On this site you'll be able to quickly get access to recipes, according to your needs.
         It's time to start thinking about your next website! This time the goal will be to use JavaScript to make your pages
         more interactive. Again the content is up to you.
         
