--- a/instructions.html
+++ b/instructions.html
@@ -27,8 +27,7 @@
                     <a class="nav-link" href="recipes.html" style="color: white">Recipes</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="terza.html" style="color: white">Terza <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="favourites.html" style="color: white">Favourites</a>
                 </li>
             </ul>
         </div>
