--- a/favourites/favourites.html
+++ b/favourites/favourites.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html" style="color: white">Home</a>
+                    <a class="nav-link" href="../index.html" style="color: white">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="recipes.html" style="color: white">Recipes</a>
+                    <a class="nav-link" href="../recipes/recipes.html" style="color: white">Recipes</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="favourites.html" style="color: white">Favourites <span class="sr-only">(current)</span></a>
@@ -63,7 +63,6 @@
         </div>
     </footer>
 
-    <script src="data.js"></script>
     <script src="favourites.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
