--- a/instructions/instructions.html
+++ b/instructions/instructions.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html" style="color: white">Home</a>
+                    <a class="nav-link" href="../index.html" style="color: white">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="recipes.html" style="color: white">Recipes</a>
+                    <a class="nav-link" href="../recipes/recipes.html" style="color: white">Recipes</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="favourites.html" style="color: white">Favourites</a>
+                    <a class="nav-link" href="../favourites/favourites.html" style="color: white">Favourites</a>
                 </li>
             </ul>
         </div>
@@ -56,7 +56,7 @@
         </div>
     </footer>
 
-    <script src="recipes.js"></script>
+    <script src="../recipes/recipes.js"></script>
     <script src="instructions.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
